# x86-codegen

./: .gitignore  Cargo.toml  README.md  a.out  diff.txt  exec.c  ir.txt  perf.data
.cargo/: config.toml
src/: encode.rs  exp_ir.rs  instructions.rs  ir.rs  lib.rs  main.rs
