[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
libc = "0.2.147"
libffi = "3.2.0"
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.27", features = ["full", "visit", "extra-traits", "parsing", "printing"] }
termion = "2.0.1"

[dev-dependencies]
itertools = "0.11.0"

[build-dependencies]
itertools = "0.11.0"
